...
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimaryDark"
  android:orientation="vertical">

  <ImageView
    android:id="@+id/music_player_close"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:contentDescription="@string/close"
    android:src="@drawable/close"/>
...
    android:layout_below="@id/music_player_close"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:gravity="center_horizontal">

    <ImageView
      android:id="@+id/music_player_play_bari"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:layout_marginStart="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginRight="10dp"
      android:contentDescription="@string/track_content_description"
      android:src="@drawable/play_circle_bari_white"/>

    <ImageView
      android:id="@+id/music_player_play_bass"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:layout_marginStart="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginRight="10dp"
      android:contentDescription="@string/track_content_description"
      android:src="@drawable/play_circle_bass_white"/>

    <ImageView
      android:id="@+id/music_player_play_all"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:layout_marginStart="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginRight="10dp"
      android:contentDescription="@string/track_content_description"
      android:src="@drawable/play_circle_outline_white"/>

    <ImageView
      android:id="@+id/music_player_play_lead"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:layout_marginStart="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginRight="10dp"
      android:contentDescription="@string/track_content_description"
      android:src="@drawable/play_circle_lead_white"/>

    <ImageView
      android:id="@+id/music_player_play_tenor"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:layout_marginStart="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginRight="10dp"
      android:contentDescription="@string/track_content_description"
      android:src="@drawable/play_circle_tenor_white"/>

  </LinearLayout>

  <TextView
    android:id="@+id/music_player_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/music_player_play_tracks_layout"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal"
    android:layout_marginStart="25dp"
...
    android:maxLines="1"
    android:text="@string/title"
    android:textColor="@android:color/white"
    android:textSize="@dimen/media_player_title"/>

  <TextView
    android:id="@+id/music_player_part"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/music_player_title"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal"
    android:text="@string/voice_part"
    android:textColor="@android:color/white"
    android:textSize="@dimen/media_player_part"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/music_player_speed"
    android:layout_below="@id/music_player_part"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:max="100"/>

      <TextView
        android:id="@+id/music_player_seek_bar_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/music_player_seek_bar"
        android:layout_alignStart="@id/music_player_seek_bar"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
...
        android:paddingRight="10dp"
        android:text="@string/seek_bar_start"
        android:textColor="@android:color/white"
        android:textSize="12sp"/>

      <TextView
        android:id="@+id/music_player_seek_bar_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/music_player_seek_bar"
        android:layout_alignEnd="@id/music_player_seek_bar"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
...
    <LinearLayout
      android:layout_width="@dimen/play_size"
      android:layout_height="@dimen/play_size"
      android:layout_gravity="center">

      <ProgressBar
        android:id="@+id/music_player_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp"/>

      <ImageView
        android:id="@+id/music_player_play_pause"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/playbackControl"
        android:visibility="gone"
        app:srcCompat="@drawable/play_circle_filled_white"/>

...
    android:progress="3"/>

  <LinearLayout
    android:id="@+id/music_player_speed_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@id/music_player_balance"
    android:layout_centerHorizontal="true">

    <TextView
      android:id="@+id/music_player_speed_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
...
      android:layout_marginEnd="5dp"
      android:layout_marginBottom="10dp"
      android:text="@string/speed"
      android:textColor="@android:color/white"/>

    <TextView
      android:id="@+id/music_player_speed_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/speed_start_value"
      android:textColor="@android:color/white"/>

  </LinearLayout>
...
