...
  <string name="nav_lists">Lists</string>
  <string name="nav_settings">Settings</string>
  <string name="nav_pitch_pipe">Pitch Pipe</string>

  <string name="action_add_to_default_list">Add to Default List</string>
  <string name="action_delete_from_default_list">Remove from Default List</string>
  <string name="action_search">Search</string>
  <string name="action_sort">Sort</string>
  <string name="action_add_list">Add List</string>
  <string name="action_delete_list">Delete List</string>
  <string name="action_list_options">List Options</string>
  <string name="action_menu">Menu</string>

  <string name="network_error">No network connection available.</string>
  <string name="previous">Previous</string>
  <string name="next">Next</string>

  <string name="no_results">No Results Found</string>
  <string name="no_favorites">No Tags</string>
  <string name="close">Close</string>
  <string name="playbackControl">Playback Control</string>

  <string name="tuning">Tuning</string>
  <string name="update">Update Frequency</string>

  <string name="balance">Balance</string>
  <string name="speed">Speed:</string>
  <string name="speed_start_value">1x</string>
  <string name="pitch">Semitones:</string>
  <string name="pitch_start_value">0</string>
  <string name="seek_bar_start">00:00</string>
  <string name="seek_bar_end">-00:00</string>
  <string name="title">Title</string>
  <string name="voice_part">Voice Part</string>

  <string name="pitch_sharp_flat">#/b</string>
  <string name="pitch_flat_sharp">b/#</string>
  <string name="pitch_a">A</string>
...
  <string name="sung_key">Key of</string>
  <string name="views">views</string>

  <string name="tag_menu_key">Key</string>
  <string name="tag_menu_tracks">Tracks</string>
  <string name="tag_menu_all_parts">All Parts</string>
  <string name="tag_menu_tenor">Tenor</string>
  <string name="tag_menu_lead">Lead</string>
  <string name="tag_menu_bass">Bass</string>
  <string name="tag_menu_bari">Bari</string>
  <string name="tag_menu_other1">Other</string>
  <string name="tag_menu_other2">Other</string>
  <string name="tag_menu_other3">Other</string>
  <string name="tag_menu_other4">Other</string>
  <string name="tag_menu_video_title">Videos</string>
  <string name="tag_menu_video1">Video 1</string>
...
