...
    android:layout_marginTop="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical">

    <TextView
      android:id="@+id/tag_detail_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:ellipsize="end"
      android:maxLines="1"
      android:text="@string/tag_name"
...
          android:layout_marginBottom="10dp"
          android:gravity="start|center_vertical"
          android:text="@string/tag_menu_tracks"
          android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/tag_detail_track_all"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:drawableStart="@drawable/play_circle_outline"
          android:drawablePadding="30dp"
          android:fontFamily="sans-serif"
          android:gravity="start|center_vertical"
...
          android:textAllCaps="false"
          android:textColor="@color/lightSecondaryTitle"
          android:textSize="15sp"
          android:theme="@style/PrimaryFlatButton" />

        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/tag_detail_track_tenor"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:drawableStart="@drawable/play_circle_tenor"
          android:drawablePadding="30dp"
          android:fontFamily="sans-serif"
          android:gravity="start|center_vertical"
...
          android:textAllCaps="false"
          android:textColor="@color/lightSecondaryTitle"
          android:textSize="15sp"
          android:theme="@style/PrimaryFlatButton" />

        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/tag_detail_track_lead"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:drawableStart="@drawable/play_circle_lead"
          android:drawablePadding="30dp"
          android:fontFamily="sans-serif"
          android:gravity="start|center_vertical"
...
          android:textAllCaps="false"
          android:textColor="@color/lightSecondaryTitle"
          android:textSize="15sp"
          android:theme="@style/PrimaryFlatButton" />

        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/tag_detail_track_bass"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:drawableStart="@drawable/play_circle_bass"
          android:drawablePadding="30dp"
          android:fontFamily="sans-serif"
          android:gravity="start|center_vertical"
...
          android:textAllCaps="false"
          android:textColor="@color/lightSecondaryTitle"
          android:textSize="15sp"
          android:theme="@style/PrimaryFlatButton" />

        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/tag_detail_track_bari"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:drawableStart="@drawable/play_circle_bari"
          android:drawablePadding="30dp"
          android:fontFamily="sans-serif"
          android:gravity="start|center_vertical"
...
          android:textAllCaps="false"
          android:textColor="@color/lightSecondaryTitle"
          android:textSize="15sp"
          android:theme="@style/PrimaryFlatButton" />

        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/tag_detail_track_other1"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:drawableStart="@drawable/play"
          android:drawablePadding="30dp"
          android:fontFamily="sans-serif"
          android:gravity="start|center_vertical"
...
