...
  android:layout_height="fill_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context=".ui.MainActivity"
  tools:showIn="@layout/activity_main">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/track_toolbar"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_alignParentBottom="true"
    android:background="@color/colorPrimaryDark"
    android:visibility="gone"
    app:contentInsetLeft="0dp"
...
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

      <ImageView
        android:id="@+id/player_control"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/playbackControl"
        android:visibility="gone"/>

    </LinearLayout>
...
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>

      <TextView
        android:id="@+id/selected_track_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="#BBBBBB"
        android:textSize="14sp"/>

    </LinearLayout>

    <ImageView
      android:id="@+id/player_close"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:layout_gravity="end"
      android:contentDescription="@string/close"
      android:paddingStart="5dp"
      android:paddingTop="5dp"
...
